# navigator-web-assistant

./: .gitignore  Cargo.toml  README.md
.github/workflows/: action.yml
src/: cli.rs  data_logger.rs  hardware_manager.rs  logger.rs  main.rs
src/server/: mod.rs
src/server/protocols/v1/: errors.rs  mod.rs  packages.rs  rest.rs  structures.rs  websocket.rs
src/server/protocols/v1/frontend/: index.html
