[package]
name = "navigator-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
actix-ws = "0.2.5"
chrono = { version = "0.4.31", features = ["serde"] }
clap = "4.4.11"
env_logger = "0.10.1"
futures = "0.3.29"
futures-util = "0.3.29"
lazy_static = "1.4.0"
log = "0.4.20"
mime_guess = "2.0.4"
navigator-rs = "0.3.0"
paperclip = { version = "0.8.2" , features = ["actix4", "swagger-ui"] }
regex = "1.10.2"
rust-embed = "8.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
